--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "von-neumann-frontend",
   "version": "1.0.0",
+  "proxy": "http://localhost:3001",
   "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
